# JEngine

./: CMakeLists.txt  ReadMe.md
Client/: CMakeLists.txt
Framework/Common/: CMakeLists.txt
Framework/Common/AppPlatform/: AndroidApplication.cpp  BaseApplication.cpp  BaseApplication.h  OsxApplication.cpp
Framework/Common/Entry/: main.cpp
Framework/Interface/: IRuntimeModule.h  Interface.h
engine/include/AppPlatform/: IApplication.h  OsxApplication.h
engine/src/: CMakeLists.txt
engine/src/AppPlatform/: AndroidApplication.cpp  BaseApplication.cpp  OsxApplication.cpp  WindowsApplication.cpp
engine/src/Entry/: main.cpp
test/: App.cpp  CMakeLists.txt
